--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "angular": "~1.3.12",
-    "lodash": "~3.1.0"
+    "lodash": "~3.1.0",
+    "angular-route": "~1.3.12"
   }
 }
