--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "angular": "~1.3.12",
     "lodash": "~3.1.0",
-    "angular-route": "~1.3.12"
+    "angular-route": "~1.3.12",
+    "angular-touch": "~1.3.12",
+    "angular-animate": "~1.3.12"
   }
 }
