--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homepage",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Aaron's Homepage",
   "main": "gulpfile.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "del": "^1.1.1",
     "glob": "^4.3.5",
     "gulp": "^3.8.10",
+    "gulp-bump": "^0.1.13",
     "gulp-concat": "^2.4.3",
     "gulp-connect": "^2.2.0",
     "gulp-html-replace": "^1.4.4",
